Add class,add font-size

--- a/index.html
+++ b/index.html
@@ -15,15 +15,19 @@
     <link rel="stylesheet" href="./assets/css/style.css" />
   </head>
   <body>
-    <article class="user-card">
+    <article class="User_Card">
       <div class="background">
         <i class="fa-solid fa-pen-to-square"></i>
       </div>
-      <img src="./assets/images/Kelly_Jimena.jpg" alt="Kelly Jimena" />
-      <h2>Kelly Jimena</h2>
-      <div>80931 VonRueden Ferry</div>
-      <div>Web Developer</div>
-      <p>
+      <img
+        class="UserImg"
+        src="./assets/images/Kelly_Jimena.jpg"
+        alt="Kelly Jimena"
+      />
+      <h2 class="UserName">Kelly Jimena</h2>
+      <div class="UserGeo">80931 VonRueden Ferry</div>
+      <div class="UserJob">Web Developer</div>
+      <p class="UserExperience">
         Creative Web Developer skilled in building modern, responsive websites.
         Passionate about clean code, UI/UX, performance, and continuous
         learning.
