--- a/index.html
+++ b/index.html
@@ -19,23 +19,27 @@
       <div class="background">
         <i class="fa-solid fa-pen-to-square"></i>
       </div>
-      <img
-        class="UserImg"
-        src="./assets/images/Kelly_Jimena.jpg"
-        alt="Kelly Jimena"
-      />
-      <h2 class="UserName">Kelly Jimena</h2>
-      <div class="UserGeo">80931 VonRueden Ferry</div>
-      <div class="UserJob">Web Developer</div>
-      <p class="UserExperience">
-        Creative Web Developer skilled in building modern, responsive websites.
-        Passionate about clean code, UI/UX, performance, and continuous
-        learning.
-      </p>
-      <i class="fa-brands fa-facebook"></i>
-      <i class="fa-brands fa-twitter"></i>
-      <i class="fa-brands fa-google"></i>
-      <i class="fa-brands fa-instagram"></i>
+      <div class="Content_Wrapper">
+        <img
+          class="UserImg"
+          src="./assets/images/Kelly_Jimena.jpg"
+          alt="Kelly Jimena"
+        />
+        <h2 class="UserName">Kelly Jimena</h2>
+        <div class="UserGeo">80931 VonRueden Ferry</div>
+        <div class="UserJob">Web Developer</div>
+        <p class="UserExperience">
+          Creative Web Developer skilled in building modern, responsive
+          websites. Passionate about clean code, UI/UX, performance, and
+          continuous learning.
+        </p>
+        <footer>
+          <i class="UserSocialLink fa-brands fa-facebook"></i>
+          <i class="UserSocialLink fa-brands fa-twitter"></i>
+          <i class="UserSocialLink fa-brands fa-google"></i>
+          <i class="UserSocialLink fa-brands fa-instagram"></i>
+        </footer>
+      </div>
     </article>
   </body>
 </html>
